--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
     <div class="image-grid">
       <!-- Project-->
       <div>
+        <a href="project-pages\lenia\lenia.html">
+          <img src="project-pages\lenia\lenia_2.png">
+          <div class="caption">Lenia | Unadvanced life simulation</div>
+        </a>
+      </div>
+
+
+      <!-- Project-->
+      <div>
         <a href="project-pages\confetti_mk3\confetti_mk3.html">
           <img src="project-pages\confetti_mk3\20240908_221531.jpg">
           <div class="caption">Confetti Dispenser Mk 3</div>
