--- a/project-pages/lenia/lenia.html
+++ b/project-pages/lenia/lenia.html
@@ -128,10 +128,12 @@
 
     <!--Images!!!-->
     <div class="image-grid">
-        <img src="lenia_2.png" onclick="showOverlay(this.src)">
         <img src="lenia_1.png" onclick="showOverlay(this.src)">
-        <img src="EMCL_box.jpg" onclick="showOverlay(this.src)">
-        
+        <iframe width="1806" height="1016" src="https://www.youtube.com/embed/YLgcEH7MuVQ" title="Lenia Demo 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="1806" height="1016" src="https://www.youtube.com/embed/bzGKVTtRdd8" title="Lenia Demo 2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="1806" height="1016" src="https://www.youtube.com/embed/rqYOMIeDkfA" title="Lenia Demo 3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="1806" height="1016" src="https://www.youtube.com/embed/cwoqakBhex0" title="Lenia Demo 4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="1806" height="1016" src="https://www.youtube.com/embed/qSq-246wn1k" title="Lenia Demo 5" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     
       <!-- Overlay -->
